adding the 'remove suggested' feature

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -35,12 +35,12 @@
 
       <label class="row">
         <input id="removeSuggested" type="checkbox" />
-        <span>Suggested posts (Follow)</span>
+        <span>Suggested posts (Follow/Join)</span>
       </label>
 
       <label class="row">
         <input id="removeWall" type="checkbox" />
-        <span>Wall / News feed</span>
+        <span>News feed</span>
       </label>
 
       <p class="hint">
