adding the slogan "cleaner facebook"

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -10,7 +10,7 @@
   <div class="wrap">
     <header>
       <div class="title">FreshBook</div>
-      <div class="subtitle">MVP 1</div>
+      <div class="subtitle">cleaner Facebook</div>
     </header>
 
     <div class="card">
